Cambios servicios firmas

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -47,6 +47,9 @@
               <a class="nav-link text-danger" routerLink="/mine">Mis peticiones</a>
             </li>
             <li *ngIf="isSignedIn" class="nav-item">
+              <a class="nav-link text-danger" routerLink="/minefirmas">Mis peticiones firmadas</a>
+            </li>
+            <li *ngIf="isSignedIn" class="nav-item">
               <a class="nav-link text-danger" routerLink="/petition/create">Iniciar una petición</a>
             </li>
           </ul>
