--- a/frontend/src/app/peticion/view/view.component.html
+++ b/frontend/src/app/peticion/view/view.component.html
@@ -1,62 +1,76 @@
 <div class="container mt-4 my-5">
-    <div class="card shadow-lg border-0">
-      <div class="row g-0">
-        <div class="col-md-4 d-flex align-items-center justify-content-center bg-light p-3">
-          <img
-            *ngIf="peticion.file?.file_path"
-            [src]="'http://127.0.0.1:8000/storage/' + peticion.file.file_path"
-            class="img-fluid rounded img-thumbnail shadow"
-            alt="Imagen de la petición"
-            style="max-height: 280px; object-fit: cover;"
-          />
-          <p *ngIf="!peticion.file?.file_path" class="text-muted">Sin imagen disponible</p>
-        </div>
-  
-        <!-- Detalles -->
-        <div class="col-md-8">
-          <div class="card-body">
-            <h1 class="card-title text-danger fw-bold">{{ peticion.titulo }}</h1>
-            <p class="card-text">
-              <strong>Descripción:</strong> {{ peticion.descripcion }}
-            </p>
-            <p class="card-text">
-              <strong>Destinatario:</strong> {{ peticion.destinatario }}
-            </p>
-            <p class="card-text">
-              <strong>Estado:</strong>
-              <span
-                class="badge"
-                [ngClass]="{
-                  'bg-success': peticion.estado === 'aceptado',
-                  'bg-warning': peticion.estado === 'pendient'
-                }"
+  <div class="card shadow-lg border-0">
+    <div class="row g-0">
+      <div
+        class="col-md-4 d-flex align-items-center justify-content-center bg-light p-3"
+      >
+        <img
+          *ngIf="peticion.file?.file_path"
+          [src]="'http://127.0.0.1:8000/storage/' + peticion.file.file_path"
+          class="img-fluid rounded img-thumbnail shadow"
+          alt="Imagen de la petición"
+          style="max-height: 280px; object-fit: cover"
+        />
+        <p *ngIf="!peticion.file?.file_path" class="text-muted">
+          Sin imagen disponible
+        </p>
+      </div>
+
+      <!-- Detalles -->
+      <div class="col-md-8">
+        <div class="card-body">
+          <h1 class="card-title text-danger fw-bold">{{ peticion.titulo }}</h1>
+          <p class="card-text">
+            <strong>Descripción:</strong> {{ peticion.descripcion }}
+          </p>
+          <p class="card-text">
+            <strong>Destinatario:</strong> {{ peticion.destinatario }}
+          </p>
+          <p class="card-text">
+            <strong>Estado:</strong> {{ peticion.estado }}
+          </p>
+          <p class="card-text">
+            <strong>Usuario:</strong> {{ peticion.user?.name }}
+          </p>
+          <p class="card-text">
+            <strong>Firmantes:</strong> {{ peticion.firmantes }}
+          </p>
+          <p class="card-text">
+            <strong>Categoría:</strong> {{ peticion.categoria?.nombre }}
+          </p>
+
+          <!-- Botones de acción -->
+          <div class="mt-3">
+            <ng-container *ngIf="isSignedIn">
+              <button
+                class="btn btn-success btn-sm me-2"
+                (click)="firmarPeticion(peticion.id)"
               >
-                {{ peticion.estado | titlecase }}
-              </span>
-            </p>
-            <p class="card-text">
-              <strong>Usuario:</strong> {{ peticion.user?.name }}
-            </p>
-            <p class="card-text">
-              <strong>Firmantes:</strong> {{ peticion.firmantes }}
-            </p>
-            <p class="card-text">
-              <strong>Categoría:</strong> {{ peticion.categoria?.nombre }}
-            </p>
-  
-            <!-- Botones de acción -->
-            <div class="mt-3">
-              <ng-container *ngIf="isSignedIn">
-                <ng-container *ngIf="esPropietario(peticion.user_id) || usuario.role_id == 1">
-                  <button class="btn btn-danger btn-sm me-2" (click)="eliminarPeticion(peticion.id)">
-                    <i class="bi bi-trash"></i> Eliminar
+                <i class="bi bi-trash"></i> Firmar
+              </button>
+              <ng-container
+                *ngIf="esPropietario(peticion.user_id) || this.usuario.role_id == 1"
+              >
+                <button
+                  class="btn btn-danger btn-sm me-2"
+                  (click)="eliminarPeticion(peticion.id)"
+                >
+                  <i class="bi bi-trash"></i> Eliminar
+                </button>
+
+                <ng-container *ngIf="this.usuario.role_id == 1">
+                  <button
+                    class="btn btn-primary btn-sm me-2"
+                    (click)="estadoPeticion(peticion.id)"
+                  >
+                    <i class="bi bi-trash"></i> Estado
                   </button>
                 </ng-container>
               </ng-container>
-            </div>
+            </ng-container>
           </div>
         </div>
       </div>
     </div>
   </div>
-  
+</div>
